Post's layout fixed Removed huge gap between rows and applied the base oks_intranet_post_kanban_cont CSS class to kanban ghosts to ensure all elements are the same size

--- a/static/src/css/kanban_style.css
+++ b/static/src/css/kanban_style.css
@@ -1,4 +1,5 @@
 .oks_intranet_kanban {
+    align-content: flex-start;
     height: 100%;
     justify-content: center !important;
 }
